# left-right

./: .gitignore  AGENTS.md  CHANGELOG.md  PenroScript-clean.md  PenroScript.md  README.md  test_arg.lr  test_map.lr
compiler/: Cargo.toml
compiler/crates/lr-ast/: Cargo.toml
compiler/crates/lr-bytecode/: Cargo.toml
compiler/crates/lr-cli/: Cargo.toml
compiler/crates/lr-codegen-js/: Cargo.toml
compiler/crates/lr-common/: Cargo.toml
compiler/crates/lr-compiler/: Cargo.toml
compiler/crates/lr-diagnostics/: Cargo.toml
compiler/crates/lr-lexer/: Cargo.toml
compiler/crates/lr-parser/: Cargo.toml
compiler/crates/lr-runtime/: Cargo.toml
compiler/crates/lr-vm/: Cargo.toml
compiler/examples/: test_closure_manual.rs
compiler/how-to-build-a-compiled-language/: 00-left-right-corrections-addendum.md  01-compiler-architecture-overview.md  02-lexer-design-theory-and-implementation.md  03-parser-design-and-ast-construction.md  08-tooling-error-reporting-debugging-repl.md
compiler/plans/creating-cli/: 00-implementation-plan.md
compiler/plans/creating-compiler/: 00-implementation-plan.md
compiler/plans/creating-lexer-and-ast/: 00-implementation-plan.md
compiler/specs/: ast-specification.md  left-right-language-specification.md  lexer-specification.md
compiler/tests/: live_runner.sh
compiler/tests/live/: 03_mul.lr  08_negation_via_zero.lr  100_throw.expected  100_throw.lr  101_catch.lr  102_catch_no_error.lr  103_error_constructor.expected  103_error_constructor.lr  104_guard_truthy.lr  104b_error_message.lr  105_optional_apply.lr  106_map_binding.lr  107_map_binding_chain.lr  108_partial_apply.lr  109_interpolation.lr  110_program_map.lr  111_ternary_truthy.lr  112_ternary_falsy.lr  113_optional_falsy.lr  114_list_equality.lr  115_map_pick.expected  115_map_pick.lr  115_optional_apply_string_trivial.lr  116_map_pick_missing.lr  116_optional_apply_list.lr  117_named_destructure.expected  117_named_destructure.lr  117_optional_apply_map.lr  118_named_destructure_missing.expected  121_default_list.lr  (+139 more)
(+263 files in other folders)
