[workspace]
resolver = "2"
members = [
    "crates/lr-common",
    "crates/lr-lexer",
    "crates/lr-ast",
    "crates/lr-parser",
    "crates/lr-diagnostics",
    "crates/lr-bytecode",
    "crates/lr-vm",
    "crates/lr-compiler",
    "crates/lr-runtime",
    "crates/lr-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
thiserror = "1"
ariadne = "0.6.0"
insta = { version = "1.47.2", features = ["yaml"] }
proptest = "1.11.0"
clap = { version = "4.6.0", features = ["derive"] }
anyhow = "1"
colored = "2.1.0"
notify = "8.2.0"